Website/assets/css-import/all.css
/* ... */
        .header .header__nav .header__ul .header__li .header__anker:after :hover {
          opacity: 1;
          transition: opacity 500ms; }
        @media only screen and (min-width: 1024px) {
          .header .header__nav .header__ul .header__li .header__anker:after {
            background: #f1f1f1;
            width: calc(10rem + 4vw); } }
  .header .header__user {
    width: 20rem;
    height: auto;
    border: 2px solid #707070;
    padding: 1.2rem 0;
    cursor: pointer;
    font-size: calc(2.6rem + .5vw);
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    top: 80%;
    text-shadow: 1px 1.4px 6px #111; }
    .header .header__user:hover {
      background: #111; }
    @media only screen and (min-width: 1024px) {
      .header .header__user {
        transform: translateX(0);
        left: unset;
        right: 2.5rem;
        top: 1rem; } }
    .header .header__user .header__user__login {
      color: #8FE501; }
      .header .header__user .header__user__login:hover {
        color: #f1f1f1; }
  .header .header__title {
    font-family: "Montserrat", sans-serif;
    color: #8FE501;
    text-transform: uppercase;
    letter-spacing: 0.2rem;
    text-shadow: 1px 1.5px 6px #000; }
  .header .header__title__h1 {
    font-size: calc(2.8rem + 1vw);
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    top: 10%; }
    @media only screen and (min-width: 1300px) {
      .header .header__title__h1 {
        font-weight: bold; } }
    @media only screen and (min-width: 2000px) {
      .header .header__title__h1 {
        font-size: calc(4rem + 1vw); } }
  @media only screen and (min-width: 1024px) {
    .header .title--1 {
      position: absolute;
      left: 25%;
      transform: translateX(-50%);
      top: 8.5rem; } }
  @media only screen and (min-width: 2000px) {
    .header .title--1 {
      position: absolute;
      left: 30%;
      transform: translateX(-50%);
      top: 7rem; } }
  .header .title--2 {
    top: 65%; }
    @media only screen and (min-width: 1024px) {
      .header .title--2 {
        position: absolute;
        left: 75%;
        transform: translateX(-50%);
        top: 8.5rem; } }
    @media only screen and (min-width: 2000px) {
      .header .title--2 {
        position: absolute;
        left: 70%;
        transform: translateX(-50%);
        top: 7rem; } }
  .header .header__logo {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    top: 9rem; }
    @media only screen and (min-width: 1024px) {
      .header .header__logo {
        top: 2rem; }
        .header .header__logo :hover {
          transform: rotate(360deg);
          transition: 1200ms; } }
    .header .header__logo .header__logo--img {
      width: 20rem;
      border: 4px solid #8FE501;
      box-shadow: 1px 1.5px 6px #000; }
      @media only screen and (min-width: 1024px) {
        .header .header__logo .header__logo--img {
          border-radius: 100%;
          width: 17em;
          height: 17rem; } }

.header__login {
  height: auto;
  display: block;
  padding: 0 2rem 2rem 2rem;
  width: 100%;
  max-width: 80rem;
  margin: 5rem auto 0 auto;
  height: auto;
  background: #1C1C1C;
  box-shadow: 1px 1.5px 6px #000;
  border: 3px solid #484646;
  margin: 8rem auto 0 auto;
  width: 100% !important;
  max-width: 60rem;
  position: absolute;
  left: 50%;
  transform: translateX(-50%) translateY(-60rem);
  color: white;
  z-index: 101; }
  @media only screen and (min-width: 720px) {
    .header__login {
      width: 75% !important; } }
  .header__login input, .header__login label {
    width: 100%;
    height: 40px; }
  .header__login label {
    margin: 0 100% auto 0; }
  .header__login input {
    margin: 2rem auto;
    font-size: 2.2rem; }
  .header__login .login__submit {
    width: 100%;
    display: block;
    height: 4rem;
    margin: 2rem auto 0 auto;
    background: #1C1C1C;
    font-size: 2rem;
    border: 2px solid #707070;
    box-shadow: 1px 1.5px 6px #111;
    color: #fff;
    font-weight: 900; }
    .header__login .login__submit:hover {
      background: #111; }
  .header__login .inlog__error--cijfer, .header__login .inlog__error--empty, .header__login .inlog__error--password {
    color: red;
    text-align: left;
    margin: 0 0 2rem 0; }
  .header__login .inlog__error--cijfer {
    display: none; }
  .header__login .inlog__error--empty {
    display: none; }
  .header__login .inlog__error--password {
    display: none; }

.homepage {
  display: grid; }
  @media only screen and (min-width: 1300px) {
    .homepage {
      grid-template: auto auto auto / 1fr 1fr;
      width: 90%;
      max-width: 160rem;
      margin: 0 auto 34rem auto; } }
  @media only screen and (min-width: 1300px) {
    .homepage {
      border: 5px solid #484646;
      box-shadow: 1px 1.5px 6px #000; } }
  .homepage .article {
    width: 100%;
    max-width: 80rem;
    margin: 5rem auto 0 auto;
    height: 100%;
    background: #1C1C1C;
    box-shadow: 1px 1.5px 6px #000;
    border-top: 3px solid #484646;
    min-height: 40rem;
    margin: 0 auto 0 auto; }
    @media only screen and (min-width: 1300px) {
      .homepage .article {
        border: 0px;
        box-shadow: none; } }
  .homepage .information__container {
    width: 60rem;
    max-width: 90vw;
    text-align: left;
    margin: 0 auto 1.5rem auto; }
    .homepage .information__container .information__container--text {
      padding: 0  2rem 2rem 2rem;
      font-size: 1.8rem;
      line-height: 1.7;
      opacity: 0;
      transform: translateY(4rem);
      transition: 500ms all ease-in-out; }
    .homepage .information__container .appear {
      opacity: 1;
      transform: translateY(0rem); }
  .homepage .register {
    grid-row: 3/4; }
    .homepage .register .register__list {
      opacity: 0;
      transform: translateY(4rem);
      transition: 500ms all ease-in-out; }
    .homepage .register .appear {
      opacity: 1;
      transform: translateY(0rem); }
/* ... */

